--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
-/data
-/model
-
+/reach/data
+/reach/model
+/reach/script.txt
 # Distribution / packaging
 .Python
 build/
